{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 28,
  "lineage": "55da2426-fc50-c9d1-9696-1e170a19e0af",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-app-nic",
            "internal_domain_name_suffix": "kifoewj3vx1uhogrramfjblxgb.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/publicIPAddresses/dummyapp-app-ip",
                "subnet_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/virtualNetworks/dummyapp-vnet/subnets/dummyapp-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "dummyapp-app-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dummyapp-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-monitor-nic",
            "internal_domain_name_suffix": "kifoewj3vx1uhogrramfjblxgb.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/publicIPAddresses/dummyapp-monitor-ip",
                "subnet_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/virtualNetworks/dummyapp-vnet/subnets/dummyapp-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "dummyapp-monitor-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "dummyapp-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.monitor",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-app-nic|/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-app-nsg",
            "network_interface_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-app-nic",
            "network_security_group_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-app-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.app",
            "azurerm_network_security_group.app",
            "azurerm_public_ip.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-monitor-nic|/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-monitor-nsg",
            "network_interface_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkInterfaces/dummyapp-monitor-nic",
            "network_security_group_id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-monitor-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.monitor",
            "azurerm_network_security_group.monitor",
            "azurerm_public_ip.monitor",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-app-nsg",
            "location": "swedencentral",
            "name": "dummyapp-app-nsg",
            "resource_group_name": "dummyapp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AppPort",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/networkSecurityGroups/dummyapp-monitor-nsg",
            "location": "swedencentral",
            "name": "dummyapp-monitor-nsg",
            "resource_group_name": "dummyapp-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/publicIPAddresses/dummyapp-app-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.230.158",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "dummyapp-app-ip",
            "resource_group_name": "dummyapp-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/publicIPAddresses/dummyapp-monitor-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.230.68",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "dummyapp-monitor-ip",
            "resource_group_name": "dummyapp-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/virtualNetworks/dummyapp-vnet/subnets/dummyapp-subnet",
            "name": "dummyapp-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dummyapp-rg",
            "virtual_network_name": "dummyapp-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "59e20a52-ad3d-43f7-b8d1-881854857731",
            "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/virtualNetworks/dummyapp-vnet",
            "location": "swedencentral",
            "name": "dummyapp-vnet",
            "resource_group_name": "dummyapp-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/b568dbb1-bd16-4fdb-af4b-0fff1381df8a/resourceGroups/dummyapp-rg/providers/Microsoft.Network/virtualNetworks/dummyapp-vnet/subnets/dummyapp-subnet",
                "name": "dummyapp-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}